K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-healing-deployment
  namespace: self-healing-system-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: self-healing-system
  template:
    metadata:
      labels:
        app: self-healing-system
    spec:
      containers:
      - name: self-healing-system-container
        image: avikasaxenapvt/self-healing-system:latest
        ports:
        - containerPort: 3000
