K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: self-healing-system-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
