K8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-healing-service
  namespace: self-healing-system-namespace
spec:
  selector:
    app: self-healing-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
