K8s/self-healing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: self-healing-ingress
  namespace: self-healing-system-namespace

spec:
  rules:
    - host: app.frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: app.backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
